--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite",
+    "deploy": "sh deploy.sh"
   },
   "dependencies": {
     "axios": "^0.24.0",
