--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite",
-    "deploy": "sh deploy.sh"
+    "start": "vite"
   },
   "dependencies": {
     "axios": "^0.24.0",
